--- a/SylDeskForm/SylDeskForm/FormRegistro1.resx
+++ b/SylDeskForm/SylDeskForm/FormRegistro1.resx
@@ -118,79 +118,15 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="button5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="button11.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAH
-        owAAB6MBMC+yxQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAHxSURBVFhHYwiO
-        LXYPiSv+DMT/6YRveObmsv///58BhBlC4oo6sCiiKQ5OKNYYdcCoA0hyQHxGzf+d+49jlYPh3LKO/yvW
-        78Qqh45JdkBSTv3/l2/f/88obMEqD8JzFq/7f/D4Waxy6JisKACFwN1HT/8fOn4OAx8+eR7swNbeOVj1
-        omOy00BV06T/vVMXYeCeKQv/p+U3YdWDDQ+9REhtPOqAweUAz8CU1a6+8f/piT2Dkq0HjwNGVBpIi839
-        vzs6+P/paL+N9xMcOOjqgAyg5aei/P5fj/L6fzzM495SD8e1kzw92enigNyMtP+7c73Alu8M9/u/yMPh
-        02J3h/+L3RzTaO4AkOWPp2n+fzdL+f+mdK//8zyd/4Mtd3f4vMTTWYsoB5DbHoBZ/mmO4v/r/fr/r3To
-        /F8a7/R/kbvjV2Ao2BCdBshpD6BbfqNT6//DHtX/1zq0/0+M8osgOReQ0h7AZfmtLs3/pZmJ5GdDYtoD
-        hCwHqaFZOZCRkUfQchCmmQMWz5/3/9TMULyWgzDNHHD24Nb/Fw5v+7+rJxyn5SBMEwfEpVX+P7xt9f9z
-        +9b+v3Zk4/8dXaFYLQdhmjggIzPnf1VZyf/pkyf/Ly5r+h+WUIJVHQijOIAa3fOwuLz/MXHJ/0PjirDK
-        o2Gk7vl/BgBjjtPY3DW+EgAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="button6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAI
-        WwAACFsB6J910AAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAOqSURBVFhHpZdr
-        SBRRFMdvZEQv6ElF9MCoiOhL1Ici8ksS9IKIIgI/FX2IQldDsJCWaEclfFTOzK5FpdgDK9QkKHuIu4ua
-        GEYRWZYlOjNqmlFmmuHtzLYzc+fO2V2tD7/Zc87c8//f2bnzIpTSqMBmApG0BCJraURWbxBJbQG+An7I
-        C4Ak4lOXYL1jAS0aEKk7HoxqABqDn0RU0kkZnYjpRCNScQKRlWMgPMAZxaKBiOpqTDMSeFFSiznh8TBE
-        vJ0bMV0MZ0FSdiOi40NU35ALrZN5bQx7kv9xJiw4BRUdPwKrHQl7IqkyJ/I/jJBCbQ2rj2FPRLULEWJ5
-        FVqcorIL4pNAD7MPI4PVx7ACX/dyRIDlIX9eyaXu+VBv58YxKFXseAwr0G8oqEiIUTjqxWwj07cXGW/Q
-        i/WwWIGsiIhAGK2VbWIhhZ1z8J4w3o4VWJ+BFUiq5Gi20NgmFrhFL0PGMyirsD4DK5C1TFwgjKhsYhvN
-        PklNdYxlgUsb6zOwAkk97Gi2obXyfycc3VbY98M51mSYHY9hBXLXTkSARze7A+TCJVsNv6PhOo6sdrBm
-        GFYgtc+Cpm8Okf9BVotYMwx7IinnUKF/47d+b2H1MeyJ7/NCaBzihMbF1KIPNL70GU0or3ye7Pdsc9W5
-        Z7MePM6CqHox4VjMvfKaHqwuoq6A4CQoPHEFsuJ5r5Cfo/B3LXTyBtFYf7uaJvuzcXOLgZSAkOTw4wuh
-        oldJBOHoKzzM0pImzIyef1GM1YddtdlrbV5swkJE7SJmyDLJ204PPb3gMBKavCBBaUZdrmMf0HykyTfJ
-        9DECHpLXMQVM9Ddg1Fxn5fU6zIBmNflAgtKT9Xno/rRg9mbTxwgw4F/YAEYjvLHBlvJK1CDWBFwBT7Lp
-        YQSRgGfEacxcZ9+DK6ZoZdsT2j3YG6LvZz+0Utoz2GfWSt/esybgF66Z+kYQCeKmcWDWyJvrbK+6aYqe
-        aRRpSUtFiIq2x9BK6a13981aZkOBOTY1IOSY+kYQDf2RCoaD/ATWlT0yRVlinoKgZ7+pbQSxCH+o2Caw
-        4OrLXswgxgR+pdaeNd+uHEaRgA18I8J7oW0S2g5YUD7e5FR9Pm3pb6Mngjm2uk5KMCuT07UbRYPIHYvA
-        +Et4AvphkvRgzgwQ/sQbYaT6hUZ3jTvOpskmYwFOxQEwf0/OdU0zasf9wjwwuMsbchQdrXFPZ7V0bMlY
-        ifSGDA+cPWB0GWgGvutH7PJ75LSgJxEbTyklfwAQBrd6MtS6IQAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="button7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAH
-        owAAB6MBMC+yxQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAL/SURBVFhH7Zbd
-        S1NhGMC9q3+gf6J/Iq+ULoICs6v8qEApTEEy0AoVFCIwM7DCCyOoMArmFKfUylJyszHdzrbjPs8+zjnb
-        zj7OaU7nMHk6zwnHjttxO3O7ELr4jZf3PLzP7/18VgcAZVPf2NxZ39AMMhqvjReLLRfpp6ml19rU2hs5
-        yo27T5LDE6sHh3QPvKGOCtzqfkbmx3TcmxSKjYVc7Oo6U1xA/NjS0Q8DQ2My+gZfweiLXznuj87yV1v7
-        Pfn0PHrH5Mf0Db8uGOfmnYcgThLa2gbPKgpgIB/zydDqVmQC5TD9Xl8wztjzqcoECMIiDagGw7qpYJyK
-        BarF6RNIcl6IhGyKxCMuWYJSqBbgGBJc9h8i34sSosyyBKX4fwZUC0QZBzgsX04EG7BULoDgQTsJfMyb
-        G+v0bUEs7ASfc00RymWARNQNUdougW3sy4/B/ooFElEP0NSGMv4N6a2IhbcksI19+TH/tqFCgWqjWgBn
-        xAatFUMHCKBoP1BMEOIcpV6AY0nwkKvgVglJGkFvp0FL8LDg4EFH8lL7k9EP7d0jtd2CABuEeTsPXz3b
-        YA7vwWYkC9ZoFkKpfTDRO6CxJGDGyF6uiQAu86IjCSvUjpT4MDmT/gPc7oEEye3BnI1PL5i3z5UUwGsV
-        8pnLxuT0wtKWoJgc8fD78Nm1ndUSvydKCuA7gPe6XL45mNzslZLjt5+BXZizC0RJAbUsictvCGWOTY6Y
-        mD3Q2oRMWQIcuyXdhmLgQ5Ufu+yMi7PbOTY5YgiKK2DjAyUFsBqSVr0iQa/8j6fZF4YVX/rY5MiyN32g
-        JYSZkgJqiUT80hV0J7KKydfpDC5/VmNPnK+6AOIM0pKEickUJF8Tl15jiSNv85NXVQDxMSHQiQdSJ76C
-        elcKvrpTsEgKoNnkYGRqHmYJPqWxJS/VTABJiI8S1gDCz4KFYsEdomF8clqqBR+M7BWUmCOEhgKB9tsP
-        4PHTlzWhs2coV4w0dqEJJbRW/oJMAANqzWExEgvUdQ3BfwSAur9gf+Cyw/NSPgAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="button8.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAH
-        ggAAB4IBcEBxtQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAALPSURBVFhHY/j/
-        //+AYobQ2KKEAcFxReFgB4TEFf8vr5/wtbJp0hd64eKa3m+RSeXv4Q649+jp/zcfPtINX7l5939kcsVH
-        FAe8ePP2/+Pnr/4/ePKcZvjJi1f/n79+i90BT1+9/l/VPPk/iE8r3DFhHtgRRDugujr3f1db9v+IxCIU
-        cXIxSQ44tCHp/+erUWD8+GTs/+gUyh1BtAOy8/P/f4JaDsPT+jMxDCQVE+2ALCwOmEpPB4DwvrWIKLh/
-        DBgFycRFQVACdnEQJjkRlpXn/W9tyv4fFo9qEC7sm1r6X3pa03+bskqs8iQ7gBQckFTyX3Zq03/BBa1g
-        bF5djaGGZg4ISij5rzixEW45DBs21KCoo9gBtt1t/11rGlDEgoHRo9rbgGE5DOu01oHVgNSS7YBgoA/N
-        p3f/V9s587/6jhkojtDqqMNqMTJW76oHJ06yHBCYXPrfaGE/2HIYhjlCv6kWq4XYsHJ/w//miXNJc4B/
-        Rvl/vZWTUCxHdoT6zA6sluHCTjP7iXeAd37Vf+0NU7FaDsOkOsJqdh9xDnCvqPuvsXU6VkvRMSmOIMoB
-        Tk1NQEOxW4YLY3OEbGPpf+FZiHIBhAk6IGjuNKwWEIPRHaGRlv7f2szvv25kwn/ZprL/gvMJOADUUtl6
-        9dL/pWdPko2XAfGC40f+zwfiCRs2/rc18oFjd6fI/2V13f9PnbmE3QHY2m6U4qSofBRHwHBMSNZ/H9+U
-        7w7GviJgB3RNWvCzf/oSquPc3Prf2Bxgb+L339Mt9qelvo800AElDbTCAeF5nXbGvn+QLXeyCb0UEJrb
-        GxJfVAKOAhBBS2xj5LsW4QDvq7ZGvpdsDT1FYfIYGqiNbQ18/cGWG/vcc3Bw4ACylyA7AqsmamJjY2NW
-        oKWvbY19U0D80NBQZmRHYNVEbQy0rBDkEBgf7ghDn/0YiumFQY6wM/SywypJP/yfAQBwu1vtk7boEAAA
-        AABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA3XAAAN1wFCKJt4AAAAB3RJ
+        TUUH4QsHASQu1zftcQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAACvSURBVDhP
+        Y4CB////swDxSSB+QALeCdUONkACiE9AuUQBkCFQJvUM+A7EN0jAv0EaFYE4AIpDicAGQMwBxQ9BBtwB
+        4g4S8F0g5oa6+gGYAGI1IPYCYh8QBvsJBwDKnwBiCSgbbMBTINYCYm0krIEHXwBiFAO+AfEGEvA7IEYx
+        ABEVRACgegwvkGOAORCDAvQOuQaAwgwU7YrkGgD2AhgMCgN2ggwhAYOyPAtENwMDAJMc9M8mQ80KAAAA
+        AElFTkSuQmCC
 </value>
   </data>
   <data name="button13.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -272,6 +208,81 @@
         34RYjLFmvIrzyU7Mi3bEDEssusi20J2Bjhfr6Y8RFP0BvBHR1804QKoAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="button5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAH
+        owAAB6MBMC+yxQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAHxSURBVFhHYwiO
+        LXYPiSv+DMT/6YRveObmsv///58BhBlC4oo6sCiiKQ5OKNYYdcCoA0hyQHxGzf+d+49jlYPh3LKO/yvW
+        78Qqh45JdkBSTv3/l2/f/88obMEqD8JzFq/7f/D4Waxy6JisKACFwN1HT/8fOn4OAx8+eR7swNbeOVj1
+        omOy00BV06T/vVMXYeCeKQv/p+U3YdWDDQ+9REhtPOqAweUAz8CU1a6+8f/piT2Dkq0HjwNGVBpIi839
+        vzs6+P/paL+N9xMcOOjqgAyg5aei/P5fj/L6fzzM495SD8e1kzw92enigNyMtP+7c73Alu8M9/u/yMPh
+        02J3h/+L3RzTaO4AkOWPp2n+fzdL+f+mdK//8zyd/4Mtd3f4vMTTWYsoB5DbHoBZ/mmO4v/r/fr/r3To
+        /F8a7/R/kbvjV2Ao2BCdBshpD6BbfqNT6//DHtX/1zq0/0+M8osgOReQ0h7AZfmtLs3/pZmJ5GdDYtoD
+        hCwHqaFZOZCRkUfQchCmmQMWz5/3/9TMULyWgzDNHHD24Nb/Fw5v+7+rJxyn5SBMEwfEpVX+P7xt9f9z
+        +9b+v3Zk4/8dXaFYLQdhmjggIzPnf1VZyf/pkyf/Ly5r+h+WUIJVHQijOIAa3fOwuLz/MXHJ/0PjirDK
+        o2Gk7vl/BgBjjtPY3DW+EgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAI
+        WwAACFsB6J910AAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAOqSURBVFhHpZdr
+        SBRRFMdvZEQv6ElF9MCoiOhL1Ici8ksS9IKIIgI/FX2IQldDsJCWaEclfFTOzK5FpdgDK9QkKHuIu4ua
+        GEYRWZYlOjNqmlFmmuHtzLYzc+fO2V2tD7/Zc87c8//f2bnzIpTSqMBmApG0BCJraURWbxBJbQG+An7I
+        C4Ak4lOXYL1jAS0aEKk7HoxqABqDn0RU0kkZnYjpRCNScQKRlWMgPMAZxaKBiOpqTDMSeFFSiznh8TBE
+        vJ0bMV0MZ0FSdiOi40NU35ALrZN5bQx7kv9xJiw4BRUdPwKrHQl7IqkyJ/I/jJBCbQ2rj2FPRLULEWJ5
+        FVqcorIL4pNAD7MPI4PVx7ACX/dyRIDlIX9eyaXu+VBv58YxKFXseAwr0G8oqEiIUTjqxWwj07cXGW/Q
+        i/WwWIGsiIhAGK2VbWIhhZ1z8J4w3o4VWJ+BFUiq5Gi20NgmFrhFL0PGMyirsD4DK5C1TFwgjKhsYhvN
+        PklNdYxlgUsb6zOwAkk97Gi2obXyfycc3VbY98M51mSYHY9hBXLXTkSARze7A+TCJVsNv6PhOo6sdrBm
+        GFYgtc+Cpm8Okf9BVotYMwx7IinnUKF/47d+b2H1MeyJ7/NCaBzihMbF1KIPNL70GU0or3ye7Pdsc9W5
+        Z7MePM6CqHox4VjMvfKaHqwuoq6A4CQoPHEFsuJ5r5Cfo/B3LXTyBtFYf7uaJvuzcXOLgZSAkOTw4wuh
+        oldJBOHoKzzM0pImzIyef1GM1YddtdlrbV5swkJE7SJmyDLJ204PPb3gMBKavCBBaUZdrmMf0HykyTfJ
+        9DECHpLXMQVM9Ddg1Fxn5fU6zIBmNflAgtKT9Xno/rRg9mbTxwgw4F/YAEYjvLHBlvJK1CDWBFwBT7Lp
+        YQSRgGfEacxcZ9+DK6ZoZdsT2j3YG6LvZz+0Utoz2GfWSt/esybgF66Z+kYQCeKmcWDWyJvrbK+6aYqe
+        aRRpSUtFiIq2x9BK6a13981aZkOBOTY1IOSY+kYQDf2RCoaD/ATWlT0yRVlinoKgZ7+pbQSxCH+o2Caw
+        4OrLXswgxgR+pdaeNd+uHEaRgA18I8J7oW0S2g5YUD7e5FR9Pm3pb6Mngjm2uk5KMCuT07UbRYPIHYvA
+        +Et4AvphkvRgzgwQ/sQbYaT6hUZ3jTvOpskmYwFOxQEwf0/OdU0zasf9wjwwuMsbchQdrXFPZ7V0bMlY
+        ifSGDA+cPWB0GWgGvutH7PJ75LSgJxEbTyklfwAQBrd6MtS6IQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAH
+        owAAB6MBMC+yxQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAL/SURBVFhH7Zbd
+        S1NhGMC9q3+gf6J/Iq+ULoICs6v8qEApTEEy0AoVFCIwM7DCCyOoMArmFKfUylJyszHdzrbjPs8+zjnb
+        zj7OaU7nMHk6zwnHjttxO3O7ELr4jZf3PLzP7/18VgcAZVPf2NxZ39AMMhqvjReLLRfpp6ml19rU2hs5
+        yo27T5LDE6sHh3QPvKGOCtzqfkbmx3TcmxSKjYVc7Oo6U1xA/NjS0Q8DQ2My+gZfweiLXznuj87yV1v7
+        Pfn0PHrH5Mf0Db8uGOfmnYcgThLa2gbPKgpgIB/zydDqVmQC5TD9Xl8wztjzqcoECMIiDagGw7qpYJyK
+        BarF6RNIcl6IhGyKxCMuWYJSqBbgGBJc9h8i34sSosyyBKX4fwZUC0QZBzgsX04EG7BULoDgQTsJfMyb
+        G+v0bUEs7ASfc00RymWARNQNUdougW3sy4/B/ooFElEP0NSGMv4N6a2IhbcksI19+TH/tqFCgWqjWgBn
+        xAatFUMHCKBoP1BMEOIcpV6AY0nwkKvgVglJGkFvp0FL8LDg4EFH8lL7k9EP7d0jtd2CABuEeTsPXz3b
+        YA7vwWYkC9ZoFkKpfTDRO6CxJGDGyF6uiQAu86IjCSvUjpT4MDmT/gPc7oEEye3BnI1PL5i3z5UUwGsV
+        8pnLxuT0wtKWoJgc8fD78Nm1ndUSvydKCuA7gPe6XL45mNzslZLjt5+BXZizC0RJAbUsictvCGWOTY6Y
+        mD3Q2oRMWQIcuyXdhmLgQ5Ufu+yMi7PbOTY5YgiKK2DjAyUFsBqSVr0iQa/8j6fZF4YVX/rY5MiyN32g
+        JYSZkgJqiUT80hV0J7KKydfpDC5/VmNPnK+6AOIM0pKEickUJF8Tl15jiSNv85NXVQDxMSHQiQdSJ76C
+        elcKvrpTsEgKoNnkYGRqHmYJPqWxJS/VTABJiI8S1gDCz4KFYsEdomF8clqqBR+M7BWUmCOEhgKB9tsP
+        4PHTlzWhs2coV4w0dqEJJbRW/oJMAANqzWExEgvUdQ3BfwSAur9gf+Cyw/NSPgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button8.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAH
+        ggAAB4IBcEBxtQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAALPSURBVFhHY/j/
+        //+AYobQ2KKEAcFxReFgB4TEFf8vr5/wtbJp0hd64eKa3m+RSeXv4Q649+jp/zcfPtINX7l5939kcsVH
+        FAe8ePP2/+Pnr/4/ePKcZvjJi1f/n79+i90BT1+9/l/VPPk/iE8r3DFhHtgRRDugujr3f1db9v+IxCIU
+        cXIxSQ44tCHp/+erUWD8+GTs/+gUyh1BtAOy8/P/f4JaDsPT+jMxDCQVE+2ALCwOmEpPB4DwvrWIKLh/
+        DBgFycRFQVACdnEQJjkRlpXn/W9tyv4fFo9qEC7sm1r6X3pa03+bskqs8iQ7gBQckFTyX3Zq03/BBa1g
+        bF5djaGGZg4ISij5rzixEW45DBs21KCoo9gBtt1t/11rGlDEgoHRo9rbgGE5DOu01oHVgNSS7YBgoA/N
+        p3f/V9s587/6jhkojtDqqMNqMTJW76oHJ06yHBCYXPrfaGE/2HIYhjlCv6kWq4XYsHJ/w//miXNJc4B/
+        Rvl/vZWTUCxHdoT6zA6sluHCTjP7iXeAd37Vf+0NU7FaDsOkOsJqdh9xDnCvqPuvsXU6VkvRMSmOIMoB
+        Tk1NQEOxW4YLY3OEbGPpf+FZiHIBhAk6IGjuNKwWEIPRHaGRlv7f2szvv25kwn/ZprL/gvMJOADUUtl6
+        9dL/pWdPko2XAfGC40f+zwfiCRs2/rc18oFjd6fI/2V13f9PnbmE3QHY2m6U4qSofBRHwHBMSNZ/H9+U
+        7w7GviJgB3RNWvCzf/oSquPc3Prf2Bxgb+L339Mt9qelvo800AElDbTCAeF5nXbGvn+QLXeyCb0UEJrb
+        GxJfVAKOAhBBS2xj5LsW4QDvq7ZGvpdsDT1FYfIYGqiNbQ18/cGWG/vcc3Bw4ACylyA7AqsmamJjY2NW
+        oKWvbY19U0D80NBQZmRHYNVEbQy0rBDkEBgf7ghDn/0YiumFQY6wM/SywypJP/yfAQBwu1vtk7boEAAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
   <data name="button9.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAH
@@ -324,23 +335,23 @@
   </data>
   <data name="Buscarbutton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAAX0AAAF9AWD9boMAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAADQUlEQVRYR7WWy08TURSHR6P/gEYTo7ZV6EB7eVgHoxIZMA1pCwkEFYimgKbKhhhkIWyMYYELEqNB
-        hJUrdyxM3GqIcYcrEhMXGnHFXkzKikSv5zdthzt3Tgdq6+LrY+g5332cey6GlJIlHIudCNU3DYWiYp5Y
-        DZniJ71vhMz4Cr1P03vSsqzDXGwl+B8YxoGwKSZIsk3IIMJR8TkSFef0HJXg+RJpbIzQTD9wsgB2QvXi
-        sdHVdUjNtV/cD448Kn5pyV3qWtplJJZg/+Zgirdq4v1SeKFl52YurvTLzNRrOTz/SY4ub8iRl9/ktdn3
-        8mruqTwrLnh+62CKMV2wF85Lcc/dRGGzWdqjc44QYo6h+TXZmrzlHUBUbJ0yW0/qkiAK1a4VHOScVCe7
-        +FXGLvWoA5Cno+INJyqHUTxqbgIse9DMdQZm38lwQ4s6iDxt6UFOxmFQAM65mwB7zomCSKRuqwOg49kU
-        42QcGMCqGlwquEroHHviGQCtapaTcRjFDucE4qhxgr3ofbjiGQAV9TNOxoEV2CgF4pxXsv8lUvdfeQcQ
-        FY84GQetgNPb3WCcc04SRPvQjHcAZjzDyTiwAtNqMJoMJynPdxm/3OsZQF1dy3FOxoEVSKrB6HBoMrzM
-        T3J8wSMnNjlROQxcqbjV1CTocGgynFDlxtxHeSZuqXI6AWKGE5XDecGVSsE7aiJ0ODQZToxlx8x1eTxx
-        cTszeOeYLgnC/YArVU0G0OHQZHDOcdRQ7Sg4fc9BpKFZXs/ek9nxyfXB3NQRVRLE7ge6z3Gl6on3A+Td
-        fcMkf1Bkcn1gdOKoKiqH7wGuVEq6pUvKgWUvzLwg77uZk+3d/dKy038sO/PD6kjd1R0q7ENcqbjVSJDX
-        hQqbKDjsOWZckpPYT0dqGf9zcC7fAxXcarhY0NvRXtHh0GT0c449xyCKMy/HkhpTwvfgX8Gek4SWnZU7
-        nLczi3qc50u1OHvOiD10pF+oMZ4E1dJmp3Os1M9CKcaXpFpQcIzQR5udeo7fs0mqAdVOgiVdyNHWmRph
-        k9QCFBwn9dCZ/sIG1woUHCveJc8G1hKSLGhSlTU2qNag4Bj574TdY7MB/wMUHPacxHliDXIppfEXNGSB
-        FnBkrwgAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
+        fQAAAX0BYP1ugwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAANBSURBVFhHtZbL
+        TxNRFIdHo/+ARhOjtlXoQHt5WAejEhkwDWkLCQQViKaApsqGGGQhbIxhgQsSo0GElSt3LEzcaohxhysS
+        ExcaccVeTMqKRK/nN22HO3dOB2rr4utj6DnffZx7LoaUkiUci50I1TcNhaJinlgNmeInvW+EzPgKvU/T
+        e9KyrMNcbCX4HxjGgbApJkiyTcggwlHxORIV5/QcleD5EmlsjNBMP3CyAHZC9eKx0dV1SM21X9wPjjwq
+        fmnJXepa2mUklmD/5mCKt2ri/VJ4oWXnZi6u9MvM1Gs5PP9Jji5vyJGX3+S12ffyau6pPCsueH7rYIox
+        XbAXzktxz91EYbNZ2qNzjhBijqH5NdmavOUdQFRsnTJbT+qSIArVrhUc5JxUJ7v4VcYu9agDkKej4g0n
+        KodRPGpuAix70Mx1BmbfyXBDizqIPG3pQU7GYVAAzrmbAHvOiYJIpG6rA6Dj2RTjZBwYwKoaXCq4Sugc
+        e+IZAK1qlpNxGMUO5wTiqHGCveh9uOIZABX1M07GgRXYKAXinFey/yVS9195BxAVjzgZB62A09vdYJxz
+        ThJE+9CMdwBmPMPJOLAC02owmgwnKc93Gb/c6xlAXV3LcU7GgRVIqsHocGgyvMxPcnzBIyc2OVE5DFyp
+        uNXUJOhwaDKcUOXG3Ed5Jm6pcjoBYoYTlcN5wZVKwTtqInQ4NBlOjGXHzHV5PHFxOzN455guCcL9gCtV
+        TQbQ4dBkcM5x1FDtKDh9z0GkoVlez96T2fHJ9cHc1BFVEsTuB7rPcaXqifcD5N19wyR/UGRyfWB04qgq
+        KofvAa5USrqlS8qBZS/MvCDvu5mT7d390rLTfyw788PqSN3VHSrsQ1ypuNVIkNeFCpsoOOw5ZlySk9hP
+        R2oZ/3NwLt8DFdxquFjQ29Fe0eHQZPRzjj3HIIozL8eSGlPC9+BfwZ6ThJadlTuctzOLepznS7U4e86I
+        PXSkX6gxngTV0manc6zUz0IpxpekWlBwjNBHm516jt+zSaoB1U6CJV3I0daZGmGT1AIUHCf10Jn+wgbX
+        ChQcK94lzwbWEpIsaFKVNTao1qDgGPnvhN1jswH/AxQc9pzEeWINciml8Rc0ZIEWcGSvCAAAAABJRU5E
+        rkJggg==
 </value>
   </data>
   <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -458,17 +469,6 @@
         o+NWrIKlDfFpGLjy26n1Jqx4rM5RG5CjsjY5jNw7K0N9I0to8bgsx3L9qvjt3P0BpYXtePJY1ACXlrWK
         HpRPr2H3MEwC8Z4tGIU4XJf+ghYMIL8N0OzhdK7vgF2bth+NljuC/L6taRjE/hfTSYxd1GN2L9uZ9h5N
         4+baYu0nba1vVxRhb7/sWjt9tuiOjo69hkR3A9fTgh0dHXcD4fhBtGBHR0fAgQP/A5tKCBIumgFwAAAA
-        AElFTkSuQmCC
-</value>
-  </data>
-  <data name="button11.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA3XAAAN1wFCKJt4AAAAB3RJ
-        TUUH4QsHASQu1zftcQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAACvSURBVDhP
-        Y4CB////swDxSSB+QALeCdUONkACiE9AuUQBkCFQJvUM+A7EN0jAv0EaFYE4AIpDicAGQMwBxQ9BBtwB
-        4g4S8F0g5oa6+gGYAGI1IPYCYh8QBvsJBwDKnwBiCSgbbMBTINYCYm0krIEHXwBiFAO+AfEGEvA7IEYx
-        ABEVRACgegwvkGOAORCDAvQOuQaAwgwU7YrkGgD2AhgMCgN2ggwhAYOyPAtENwMDAJMc9M8mQ80KAAAA
         AElFTkSuQmCC
 </value>
   </data>
