--- a/SylDesk/SylDesk/Grafica.resx
+++ b/SylDesk/SylDesk/Grafica.resx
@@ -117,4 +117,21 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="button17.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA3XAAAN1wFCKJt4AAAAB3RJ
+        TUUH4QsQDyYoyzJo6gAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAHZSURBVFhH
+        zVe9TsMwEA6IF2DiJbqzIiYmJARDndAnQEJsDFWlPkGVBInH6NSdR2CnTiWEOjDRhaFT+O7iSE24JE7a
+        Yj7pUxL77j7HP2fbs8X45ewongc3UeJPIq2meL5G2v9i8juXTciGbI3b9ggX6gQiI3AJppYk2xH5mjDt
+        kabeAf5qiEDrjcBtCV81pFgmrB2e3/3jSAczIWBHBjOKacLXI9KDHsZyIQfaghxz0DMyMvjP7cVXcRI8
+        xIn/iPfvUp1MxK7siWzMrbt9Fb71T42r96TVOcrsGgENcU6YCSc4/GJBPAf8LwTbCqqhcctglprNbBfF
+        c6D+o2RfxXVhiaKA1rlkuMla8TBR14JPHUfsSFkLH01Jpl58fnsJm7b5YskZk9OrbJBzH+JM0vYof0uV
+        hnsTZ0KbZu9UrGwQH6fjQyypK9j1mxhr/x5PYYKqKfUA7WqlinrxLjCNKOpAm1YAbanFinlwZ/x2BsSl
+        3ijqQPsfNMD9ELifhG6XofNE5DwVE/Cx9WZk0ZNlZpsRYVfbcaj9T8FHYnE7JtAhQTCUKDYC/t0PJATn
+        RzKC00NpDqfH8hzcE/bDYcEWF5Mc2ZxwdDXbhFmif385LYOyFicb3jt2dT33vB/QMhswlgvq2gAAAABJ
+        RU5ErkJggg==
+</value>
+  </data>
 </root>
